--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <link rel=stylesheet href=all-style.css>
+    <title>PA</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Project Ant</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
   </body>
-
   <script>
     // You can also require other files to run in this process
     require('./renderer.js')
+    const hil = require('dosyhil');
+    console.log( hil );
   </script>
 </html>
