--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
+    <h1>Webview</h1>
+    <webview id=tab0
+      src=https://github.com
+      style="
+        display: flex;
+        width: 640px;
+        height: 480px;
+        border: 3px solid lime;
+      ">
+    </webview>
   </body>
   <script>
     // You can also require other files to run in this process
