Integration of panels works

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel=stylesheet href=all.css>
     <style>
       * {
-        outline: 1px solid lime;
+        outline: 1px solid red;
       }
     </style>
     <title>PA</title>
