Window correctly sized, unnecessary paddings removed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel=stylesheet href=all.css>
+    <link rel=stylesheet href=custom.css>
     <style>
       * {
         outline: 1px solid red;
@@ -26,6 +27,7 @@
               </webview>
             </main>
             <footer>
+              <h1>Main Menus</h1>
               <h1>Project Ant</h1>
               <!-- All of the Node.js APIs are available in this renderer process. -->
               We are using Node.js <script>document.write(process.versions.node)</script>,
