--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
           <article>
             <main>
               <webview id=tab0
-                src=https://github.com
                 style="
                   display: flex;
                   width: 100%;
@@ -43,9 +42,14 @@
     </div>
   </body>
   <script>
+    const webview_controller = require('./webview_controller.js');
+    webview_controller.setup('https://github.com');
+  </script>
+  <script>
     // You can also require other files to run in this process
     require('./renderer.js')
     const hil = require('dosyhil');
     console.log( hil );
+    Object.assign( self, { hil } );
   </script>
 </html>
