--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                   height: 100%;
                 ">
               </webview>
+              <canvas id=overlay0></canvas>
             </main>
             <footer>
               <h1>Main Menus</h1>
