--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
   <script>
     const webview_configurer = require('./webview/configurer.js');
     webview_configurer.setup_webview({ first_url : 'https://github.com'});
+    const webview_communicator = require('./webview/communicator.js');
+    webview_communicator.setup_webview();
   </script>
   <script>
     // You can also require other files to run in this process
