Added two way communication tests
References #9

Code can be cleaner and we can more readily handle when things are going to be ready
to communicate with each other

But it works. Yay!

--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
     </div>
   </body>
   <script>
-    const webview_configurer = require('./webview/configurer.js');
-    webview_configurer.setup_webview({ first_url : 'https://github.com'});
-    const webview_communicator = require('./webview/communicator.js');
-    webview_communicator.setup_webview();
+    require('./webview/setup.js').install();
   </script>
 </html>
