Added sketch of Application Menus
closes #1

--- a/index.html
+++ b/index.html
@@ -150,5 +150,6 @@
   </body>
   <script>
     require('./webview/setup.js').install();
+    require('./renderer.js').install();
   </script>
 </html>
