Begun integration of selector generalization

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
     </div>
   </body>
   <script>
+    require('./computation/setup.js').install();
     require('./webview/setup.js').install();
     require('./renderer.js').install();
   </script>
