Moved separate components into separate webviews

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
               <canvas id=overlay0></canvas>
             </main>
             <footer>
-              <iframe src=search.html></iframe>
+              <webview src=search.html></webview>
             </footer>
           </article>
           <aside>
-            <iframe src=build.html></iframe>
+            <webview src=build.html></webview>
           </aside>
         </nav>
       </div>
