--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
               <canvas id=overlay0></canvas>
             </main>
             <footer>
-              <webview src=search.html></webview>
+              <webview nodeintegration src=search.html></webview>
             </footer>
           </article>
           <aside>
-            <webview src=build.html></webview>
+            <webview nodeintegration src=build.html></webview>
           </aside>
         </nav>
       </div>
