Converted components to use dosyhil and a server Using dynamic html Instead of static files Nice

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
               <canvas id=overlay0></canvas>
             </main>
             <footer>
-              <webview nodeintegration src=http://localhost:8080/search.html></webview>
+              <webview nodeintegration src=http://localhost:8080/search></webview>
             </footer>
           </article>
           <aside>
-            <webview nodeintegration src=http://localhost:8080/build.html></webview>
+            <webview nodeintegration src=http://localhost:8080/build></webview>
           </aside>
         </nav>
       </div>
