--- a/index.html
+++ b/index.html
@@ -51,13 +51,6 @@
     require('./browser-tab/setup_tab.js').install('#tab0', 'https://github.com');
     require('./webview-component/setup.js').install('#search0','http://localhost:8080/search');
     require('./webview-component/setup.js').install('#build0', 'http://localhost:8080/build');
-    const comms = require('./comms.js');
-    const api = comms.install();
-    const dct = require('dosycanvasdomtracker');
-    api.nameSelf('workspace');
-    api.listen( (e,m) => {
-      self.postMessage(m,'*');
-    });
-    dct.start_tracking({absolute: true, guest:'#tab0'});
+    require('./tracking.js').install('#tab0');
   </script>
 </html>
