--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
               <canvas id=overlay0></canvas>
             </main>
             <!--
-            <footer>
-              <webview id=search0 nodeintegration 
-                preload="./webview-component/search.js"
-              ></webview>
-            </footer>
+              <footer>
+                <webview id=search0 nodeintegration 
+                  preload="./webview-component/search.js"
+                ></webview>
+              </footer>
             !-->
           </article>
           <aside>
@@ -55,7 +55,7 @@
     require('./computation/setup.js').install();
     require('./renderer.js').install();
     require('./browser-tab/setup_tab.js').install('#tab0', 'https://news.ycombinator.com');
-    require('./webview-component/setup.js').install('#build0', 'http://localhost:8080/build');
+    require('./webview-component/setup.js').install('#build0', 'http://localhost:8080/mm.html');
     require('./tracking.js').install('#tab0');
   </script>
 </html>
