--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <script>
     require('./computation/setup.js').install();
     require('./renderer.js').install();
-    require('./browser-tab/setup_tab.js').install('#tab0', 'https://news.ycombinator.com');
+    require('./browser-tab/setup_tab.js').install('#tab0', 'https://google.com/');
     require('./webview-component/setup.js').install('#build0', 'http://localhost:8080/build');
     require('./tracking.js').install('#tab0');
   </script>
