--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <script>
     require('./renderer.js').install();
     require('./browser-tab/setup_tab.js').install('#tab0', 'https://google.com/');
-    require('./webview-component/setup.js').install('#build0', 'http://localhost:8080/mapper');
+    require('./webview-component/setup.js').install('#build0', 'http://localhost:8080/mymaps');
     require('./tracking.js').install('#tab0');
   </script>
 </html>
